# PocketBook2Craft

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  unraid-template.xml
.github/workflows/: docker-build.yml
src/pb2craft/: app.py  config.py  credentials.py  formatter.py  main.py  models.py  state.py  sync.py
src/pb2craft/api/: craft.py  pocketbook.py
src/pb2craft/processing/: cfi.py  merger.py  sorter.py
src/pb2craft/web/: routes.py
src/pb2craft/web/static/: style.css
src/pb2craft/web/templates/: base.html  index.html  login.html  logs.html  settings.html
tests/: conftest.py  test_block_formatter.py  test_book_metadata.py  test_book_metadata_edge_cases.py  test_cfi.py  test_cover_pipeline.py  test_craft_blocks.py  test_craft_client.py  test_credentials.py  test_decoration_routes.py  test_formatter.py  test_formatter_metadata.py  test_merger.py  test_metadata_tags.py  test_mtime_gating.py  test_mtime_no_new_highlights.py  test_pocketbook_client.py  test_routes.py  test_scheduler.py  test_seen_books.py  test_settings_routes.py  test_sorter.py  test_state.py  test_sync.py  test_text_block_formatter.py
